new address done

--- a/index.html
+++ b/index.html
@@ -29,13 +29,6 @@
     <link rel="stylesheet" href="assets/css/owl-carousel.css" />
 
     <link rel="stylesheet" href="assets/css/lightbox.css" />
-    <!--
-
-TemplateMo 571 Hexashop
-
-https://templatemo.com/tm-571-hexashop
-
--->
   </head>
 
   <body>
@@ -80,22 +73,7 @@ https://templatemo.com/tm-571-hexashop
                     <li><a href="contact.html">Contact Us</a></li>
                   </ul>
                 </li>
-                <li class="submenu">
-                  <a href="javascript:;">Features</a>
-                  <ul>
-                    <li><a href="#">Features Page 1</a></li>
-                    <li><a href="#">Features Page 2</a></li>
-                    <li><a href="#">Features Page 3</a></li>
-                    <li>
-                      <a
-                        rel="nofollow"
-                        href="https://templatemo.com/page/4"
-                        target="_blank"
-                        >Template Page 4</a
-                      >
-                    </li>
-                  </ul>
-                </li>
+
                 <li class="scroll-to-section">
                   <a href="#explore">Explore</a>
                 </li>
@@ -119,8 +97,8 @@ https://templatemo.com/tm-571-hexashop
             <div class="left-content">
               <div class="thumb">
                 <div class="inner-content">
-                  <h4>We Are Hexashop</h4>
-                  <span>Awesome, clean &amp; creative HTML5 Template</span>
+                  <h4>We Are Fshnarts</h4>
+                  <span>Awesome, clean &amp; Fshnarts </span>
                   <div class="main-border-button">
                     <a href="#">Purchase Now!</a>
                   </div>
@@ -240,7 +218,7 @@ https://templatemo.com/tm-571-hexashop
             <div class="section-heading">
               <h2>Men's Latest</h2>
               <span
-                >Details to details is what makes Hexashop different from the
+                >Details to details is what makes Fshnarts different from the
                 other themes.</span
               >
             </div>
@@ -277,7 +255,7 @@ https://templatemo.com/tm-571-hexashop
                   </div>
                   <div class="down-content">
                     <h4>Classic Spring</h4>
-                    <span>$120.00</span>
+
                     <ul class="stars">
                       <li><i class="fa fa-star"></i></li>
                       <li><i class="fa fa-star"></i></li>
@@ -312,7 +290,6 @@ https://templatemo.com/tm-571-hexashop
                   </div>
                   <div class="down-content">
                     <h4>Air Force 1 X</h4>
-                    <span>$90.00</span>
                     <ul class="stars">
                       <li><i class="fa fa-star"></i></li>
                       <li><i class="fa fa-star"></i></li>
@@ -347,7 +324,6 @@ https://templatemo.com/tm-571-hexashop
                   </div>
                   <div class="down-content">
                     <h4>Love Nana ‘20</h4>
-                    <span>$150.00</span>
                     <ul class="stars">
                       <li><i class="fa fa-star"></i></li>
                       <li><i class="fa fa-star"></i></li>
@@ -382,7 +358,6 @@ https://templatemo.com/tm-571-hexashop
                   </div>
                   <div class="down-content">
                     <h4>Classic Spring</h4>
-                    <span>$120.00</span>
                     <ul class="stars">
                       <li><i class="fa fa-star"></i></li>
                       <li><i class="fa fa-star"></i></li>
@@ -408,7 +383,7 @@ https://templatemo.com/tm-571-hexashop
             <div class="section-heading">
               <h2>Women's Latest</h2>
               <span
-                >Details to details is what makes Hexashop different from the
+                >Details to details is what makes Fshnarts different from the
                 other themes.</span
               >
             </div>
@@ -445,7 +420,6 @@ https://templatemo.com/tm-571-hexashop
                   </div>
                   <div class="down-content">
                     <h4>New Green Jacket</h4>
-                    <span>$75.00</span>
                     <ul class="stars">
                       <li><i class="fa fa-star"></i></li>
                       <li><i class="fa fa-star"></i></li>
@@ -480,7 +454,6 @@ https://templatemo.com/tm-571-hexashop
                   </div>
                   <div class="down-content">
                     <h4>Classic Dress</h4>
-                    <span>$45.00</span>
                     <ul class="stars">
                       <li><i class="fa fa-star"></i></li>
                       <li><i class="fa fa-star"></i></li>
@@ -515,7 +488,6 @@ https://templatemo.com/tm-571-hexashop
                   </div>
                   <div class="down-content">
                     <h4>Spring Collection</h4>
-                    <span>$130.00</span>
                     <ul class="stars">
                       <li><i class="fa fa-star"></i></li>
                       <li><i class="fa fa-star"></i></li>
@@ -550,7 +522,6 @@ https://templatemo.com/tm-571-hexashop
                   </div>
                   <div class="down-content">
                     <h4>Classic Spring</h4>
-                    <span>$120.00</span>
                     <ul class="stars">
                       <li><i class="fa fa-star"></i></li>
                       <li><i class="fa fa-star"></i></li>
@@ -576,7 +547,7 @@ https://templatemo.com/tm-571-hexashop
             <div class="section-heading">
               <h2>Kid's Latest</h2>
               <span
-                >Details to details is what makes Hexashop different from the
+                >Details to details is what makes Fshnarts different from the
                 other themes.</span
               >
             </div>
@@ -613,7 +584,6 @@ https://templatemo.com/tm-571-hexashop
                   </div>
                   <div class="down-content">
                     <h4>School Collection</h4>
-                    <span>$80.00</span>
                     <ul class="stars">
                       <li><i class="fa fa-star"></i></li>
                       <li><i class="fa fa-star"></i></li>
@@ -648,7 +618,6 @@ https://templatemo.com/tm-571-hexashop
                   </div>
                   <div class="down-content">
                     <h4>Summer Cap</h4>
-                    <span>$12.00</span>
                     <ul class="stars">
                       <li><i class="fa fa-star"></i></li>
                       <li><i class="fa fa-star"></i></li>
@@ -683,7 +652,6 @@ https://templatemo.com/tm-571-hexashop
                   </div>
                   <div class="down-content">
                     <h4>Classic Kid</h4>
-                    <span>$30.00</span>
                     <ul class="stars">
                       <li><i class="fa fa-star"></i></li>
                       <li><i class="fa fa-star"></i></li>
@@ -718,7 +686,6 @@ https://templatemo.com/tm-571-hexashop
                   </div>
                   <div class="down-content">
                     <h4>Classic Spring</h4>
-                    <span>$120.00</span>
                     <ul class="stars">
                       <li><i class="fa fa-star"></i></li>
                       <li><i class="fa fa-star"></i></li>
@@ -744,9 +711,9 @@ https://templatemo.com/tm-571-hexashop
             <div class="left-content">
               <h2>Explore Our Products</h2>
               <span
-                >You are allowed to use this HexaShop HTML CSS template. You can
-                feel free to modify or edit this layout. You can convert this
-                template as any kind of ecommerce CMS theme as you wish.</span
+                >You are allowed to use this Fshnarts. You can feel free to
+                modify or edit this layout. You can convert this template as any
+                kind of ecommerce CMS theme as you wish.</span
               >
               <div class="quote">
                 <i class="fa fa-quote-left"></i>
@@ -756,7 +723,7 @@ https://templatemo.com/tm-571-hexashop
                 </p>
               </div>
               <p>
-                There are 5 pages included in this HexaShop Template and we are
+                There are 5 pages included in this Fshnarts Template and we are
                 providing it to you for absolutely free of charge at our
                 TemplateMo website. There are web development costs for us.
               </p>
@@ -818,7 +785,7 @@ https://templatemo.com/tm-571-hexashop
             <div class="section-heading">
               <h2>Social Media</h2>
               <span
-                >Details to details is what makes Hexashop different from the
+                >Details to details is what makes Fshnarts different from the
                 other themes.</span
               >
             </div>
@@ -906,7 +873,7 @@ https://templatemo.com/tm-571-hexashop
             <div class="section-heading">
               <h2>By Subscribing To Our Newsletter You Can Get 30% Off</h2>
               <span
-                >Details to details is what makes Hexashop different from the
+                >Details to details is what makes Fshnarts different from the
                 other themes.</span
               >
             </div>
@@ -955,25 +922,19 @@ https://templatemo.com/tm-571-hexashop
                 <ul>
                   <li>
                     Store Location:<br /><span
-                      >Sunny Isles Beach, FL 33160, United States</span
+                      >201,Maitri Building Near Panchratna Tower,Opp.Affile
+                      Tower, Surat</span
                     >
                   </li>
-                  <li>Phone:<br /><span>010-020-0340</span></li>
-                  <li>Office Location:<br /><span>North Miami Beach</span></li>
+                  <li>Phone:<br /><span>0261 2548837</span></li>
                 </ul>
               </div>
               <div class="col-6">
                 <ul>
                   <li>
-                    Work Hours:<br /><span>07:30 AM - 9:30 PM Daily</span>
+                    Work Hours:<br /><span>10:30 AM - 9:30 PM Daily</span>
                   </li>
-                  <li>Email:<br /><span>info@company.com</span></li>
-                  <li>
-                    Social Media:<br /><span
-                      ><a href="#">Facebook</a>, <a href="#">Instagram</a>,
-                      <a href="#">Behance</a>, <a href="#">Linkedin</a></span
-                    >
-                  </li>
+                  <li>Email:<br /><span>fshnarts@gmail.com</span></li>
                 </ul>
               </div>
             </div>
@@ -991,19 +952,20 @@ https://templatemo.com/tm-571-hexashop
             <div class="first-item">
               <div class="logo">
                 <img
-                  src="assets/images/white-logo.png"
-                  alt="hexashop ecommerce templatemo"
+                  src="assets/images/Fashion.jpg"
+                  alt="ecommerce "
+                  style="width: 100px; height: 50px; border-radius: 999px"
                 />
               </div>
               <ul>
                 <li>
                   <a href="#"
-                    >16501 Collins Ave, Sunny Isles Beach, FL 33160, United
-                    States</a
+                    >201,Maitri Building Near Panchratna Tower,Opp.Affile Tower,
+                    Surat</a
                   >
                 </li>
-                <li><a href="#">hexashop@company.com</a></li>
-                <li><a href="#">010-020-0340</a></li>
+                <li><a href="#">fshnarts@gmail.com</a></li>
+                <li><a href="#">0261 2548837</a></li>
               </ul>
             </div>
           </div>
@@ -1035,25 +997,7 @@ https://templatemo.com/tm-571-hexashop
           </div>
           <div class="col-lg-12">
             <div class="under-footer">
-              <p>
-                Copyright © 2022 HexaShop Co., Ltd. All Rights Reserved.
-
-                <br />Design:
-                <a
-                  href="https://templatemo.com"
-                  target="_parent"
-                  title="free css templates"
-                  >TemplateMo</a
-                >
-
-                <br />Distributed By:
-                <a
-                  href="https://themewagon.com"
-                  target="_blank"
-                  title="free & premium responsive templates"
-                  >ThemeWagon</a
-                >
-              </p>
+              <p>Copyright © 2022 fshnarts Co., Ltd. All Rights Reserved.</p>
               <ul>
                 <li>
                   <a href="#"><i class="fa fa-facebook"></i></a>
