new content add and product detail

--- a/products.html
+++ b/products.html
@@ -110,7 +110,7 @@ https://templatemo.com/tm-571-hexashop
           <div class="col-lg-12">
             <div class="inner-content">
               <h2>Check Our Products</h2>
-              <span>Awesome &amp; Creative HTML CSS layout by TemplateMo</span>
+              <span>Awesome </span>
             </div>
           </div>
         </div>
@@ -135,25 +135,6 @@ https://templatemo.com/tm-571-hexashop
           <div class="col-lg-4">
             <div class="item">
               <div class="thumb">
-                <div class="hover-content">
-                  <ul>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-eye"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-star"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-shopping-cart"></i
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
                 <img src="assets/images/men-01.jpg" alt="" />
               </div>
               <div class="down-content">
@@ -171,25 +152,6 @@ https://templatemo.com/tm-571-hexashop
           <div class="col-lg-4">
             <div class="item">
               <div class="thumb">
-                <div class="hover-content">
-                  <ul>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-eye"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-star"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-shopping-cart"></i
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
                 <img src="assets/images/men-02.jpg" alt="" />
               </div>
               <div class="down-content">
@@ -207,25 +169,6 @@ https://templatemo.com/tm-571-hexashop
           <div class="col-lg-4">
             <div class="item">
               <div class="thumb">
-                <div class="hover-content">
-                  <ul>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-eye"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-star"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-shopping-cart"></i
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
                 <img src="assets/images/men-03.jpg" alt="" />
               </div>
               <div class="down-content">
@@ -243,25 +186,6 @@ https://templatemo.com/tm-571-hexashop
           <div class="col-lg-4">
             <div class="item">
               <div class="thumb">
-                <div class="hover-content">
-                  <ul>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-eye"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-star"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-shopping-cart"></i
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
                 <img src="assets/images/women-01.jpg" alt="" />
               </div>
               <div class="down-content">
@@ -279,25 +203,6 @@ https://templatemo.com/tm-571-hexashop
           <div class="col-lg-4">
             <div class="item">
               <div class="thumb">
-                <div class="hover-content">
-                  <ul>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-eye"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-star"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-shopping-cart"></i
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
                 <img src="assets/images/women-02.jpg" alt="" />
               </div>
               <div class="down-content">
@@ -315,25 +220,6 @@ https://templatemo.com/tm-571-hexashop
           <div class="col-lg-4">
             <div class="item">
               <div class="thumb">
-                <div class="hover-content">
-                  <ul>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-eye"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-star"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-shopping-cart"></i
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
                 <img src="assets/images/women-03.jpg" alt="" />
               </div>
               <div class="down-content">
@@ -351,25 +237,6 @@ https://templatemo.com/tm-571-hexashop
           <div class="col-lg-4">
             <div class="item">
               <div class="thumb">
-                <div class="hover-content">
-                  <ul>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-eye"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-star"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-shopping-cart"></i
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
                 <img src="assets/images/kid-01.jpg" alt="" />
               </div>
               <div class="down-content">
@@ -387,25 +254,6 @@ https://templatemo.com/tm-571-hexashop
           <div class="col-lg-4">
             <div class="item">
               <div class="thumb">
-                <div class="hover-content">
-                  <ul>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-eye"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-star"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-shopping-cart"></i
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
                 <img src="assets/images/kid-02.jpg" alt="" />
               </div>
               <div class="down-content">
@@ -423,25 +271,6 @@ https://templatemo.com/tm-571-hexashop
           <div class="col-lg-4">
             <div class="item">
               <div class="thumb">
-                <div class="hover-content">
-                  <ul>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-eye"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-star"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="single-product.html"
-                        ><i class="fa fa-shopping-cart"></i
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
                 <img src="assets/images/kid-03.jpg" alt="" />
               </div>
               <div class="down-content">
