--- a/single-product.html
+++ b/single-product.html
@@ -130,8 +130,8 @@ https://templatemo.com/tm-571-hexashop
           </div>
           <div class="col-lg-4">
             <div class="right-content">
-              <h4>New Green Jacket</h4>
-              <span class="price">$75.00</span>
+              <h4>Athletic Boots</h4>
+              <span class="price">1750.00</span>
               <ul class="stars">
                 <li><i class="fa fa-star"></i></li>
                 <li><i class="fa fa-star"></i></li>
@@ -140,14 +140,25 @@ https://templatemo.com/tm-571-hexashop
                 <li><i class="fa fa-star"></i></li>
               </ul>
               <span
-                >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod kon tempor incididunt ut labore.</span
+                >Athletic Boots are a tangible product because they can be seen,
+                touched and worn. They can be classified as a consumer product
+                because they are bought to satisfy an individual’s personal
+                needs. As mentioned earlier, the Athletic boots are a shopping
+                product because they are a bit more expensive than convenient
+                goods and found are in fewer stores. When shopping for them, the
+                consumer spends limited time looking around; comparing with
+                other brands to find the best alternative with sought after
+                benefits and desired features.</span
               >
               <div class="quote">
                 <i class="fa fa-quote-left"></i>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiuski smod.
+                  Athletic Boots are a single item on our product line. Our
+                  product mix is quite narrow because we’re a new company. Our
+                  product line depth includes the following: athletic boots,
+                  detachable boot extendor (or extension), foot pads designed
+                  only for athletic boots, athletic boots cleaner and washing
+                  detergent formulated only for the athletic boots.
                 </p>
               </div>
               <div class="quantity-content">
@@ -173,7 +184,7 @@ https://templatemo.com/tm-571-hexashop
                 </div>
               </div>
               <div class="total">
-                <h4>Total: $210.00</h4>
+                <h4>Total: 2100.00</h4>
                 <div class="main-border-button">
                   <a href="#">Add To Cart</a>
                 </div>
