--- a/about.html
+++ b/about.html
@@ -131,21 +131,32 @@ https://templatemo.com/tm-571-hexashop
             <div class="right-content">
               <h4>About Us &amp; Our Skills</h4>
               <span
-                >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod kon tempor incididunt ut labore.</span
+                >Our story is not like any other online store, which started
+                their launch and grew bigger and bigger, infact ours is a story
+                from the first brick of trading, retail and then moved on to
+                Online Sale introducing Fshnarts.com the way you see it now. An
+                offline market of retail experience in the Largest City of
+                Textile in India, Surat-Gujarat with a massive existence of 5+
+                years now known as Fshnarts.</span
               >
               <div class="quote">
                 <i class="fa fa-quote-left"></i>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiuski smod kon tempor incididunt ut labore.
+                  From the pioneer of retail sales of Indian ethnic wear in
+                  mens, women and kids wear fashion has just got its strength
+                  much larger with the recognition of all our stores which went
+                  on to establish step by step from one initial store of
+                  Fshnarts , Surat. We have come a long way with our business in
+                  Online Sales, launched in 2010, bringing a whole Family Store
+                  of 3 Stories.
                 </p>
               </div>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod kon tempor incididunt ut labore et dolore magna aliqua
-                ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip.
+                Read our timeline below, to review our whole story from the
+                first step and store to this Magnificent online portal which now
+                has over 10,000+ products not only in our expertised category of
+                Indian ethnic wear but also top western brands of apparels known
+                worldwide for all.
               </p>
               <ul>
                 <li>
@@ -289,33 +300,21 @@ https://templatemo.com/tm-571-hexashop
           <div class="col-lg-4">
             <div class="service-item">
               <h4>Synther Vaporware</h4>
-              <p>
-                Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed
-                do eiusmod temp incididunt ut labore, et dolore quis ipsum
-                suspend.
-              </p>
+
               <img src="assets/images/service-01.jpg" alt="" />
             </div>
           </div>
           <div class="col-lg-4">
             <div class="service-item">
               <h4>Locavore Squidward</h4>
-              <p>
-                Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed
-                do eiusmod temp incididunt ut labore, et dolore quis ipsum
-                suspend.
-              </p>
+
               <img src="assets/images/service-02.jpg" alt="" />
             </div>
           </div>
           <div class="col-lg-4">
             <div class="service-item">
               <h4>Health Gothfam</h4>
-              <p>
-                Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed
-                do eiusmod temp incididunt ut labore, et dolore quis ipsum
-                suspend.
-              </p>
+
               <img src="assets/images/service-03.jpg" alt="" />
             </div>
           </div>
