--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-6">
                     <div class="section-heading">
                         <h2>Say Hello. Don't Be Shy!</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <span>Details to details is what makes Fshnarts different from the other themes.</span>
                     </div>
                     <form id="contact" action="" method="post">
                         <div class="row">
